themes/main/src/sass/post.scss
@import '_helpers/query';
@import '_helpers/mixins';
@import '_helpers/constants';


#post {
  @include get-font(POST);
  @include page-blockquotes;
  @include other-news;

  iframe {
    width: 100%;
  }

  p {
    margin-bottom: $PARAGRAPH-SPACE;
  }

  img {
    width: 100% !important;
    height: 100% !important;
  }
}

#post .content {
  display: -webkit-flex; //Old Safari
  display: flex;
  -webkit-flex-direction: column; //Old Safari
  flex-direction: column;

  @include media-query(THREE) {
    -webkit-flex-direction: row; //Old Safari
    flex-direction: row;
  }

  .text-content {
    width: 100%;
  }
}

#post header {
  .hat {
    @include page-name();
  }

  .title{
    margin: 20px 0 10px 0;
  }

  .description {
    margin-bottom: 30px;
  }

  figure {
    margin-bottom: 20px;

    @include media-query(THREE) {
      @include site-lateral-spacing();
      max-width: 3 * $COLUMN-WIDTH;
    }

    .img-container {
      max-height: 500px;
      overflow: hidden;
    }

    figcaption{
      text-align: right;
      margin-top: 10px;
    }
  }

  .details-bar {
    display: -webkit-flex; //Old Safari
    display: flex;
    -webkit-jutify-content: space-between; //Old Safari
    justify-content: space-between;
    margin-bottom: 10px;
  }
}

#post .sidebar .share-bar {
  display: none;
  @include media-query(THREE) {
    display: block;
    @include page-name();
  }
}

#post .share-bar {
  .share-title {
    margin: 0;
  }

  .share-icons-container {
    display: flex;
    display: -webkit-flex; //Old Safari
    justify-content: flex-start;
    -webkit-jutify-content: flex-start; //Old Safari
  }

  .share-icon {
    margin: 0.4rem;
    max-width: 2.2rem;
  }
}

#post .share-mobile {
  @include media-query(THREE) {
    display: none;
  }
}

#post .details-bar .share-bar {
  .share-icons-container {
    display: flex;
    display: -webkit-flex; //Old Safari
    justify-content: flex-end;
    -webkit-jutify-content: flex-end; //Old Safari
  }
}

#post .sidebar {
  @include media-query(THREE) {
    @include column-lateral-spacing();
    min-width: $COLUMN-WIDTH;
    min-height: $COLUMN-WIDTH;
  }
}

#post header .place-and-time, time {
  padding-bottom: 10px;
  display: block;

  time {
    display: inline-block;
  }
}

